# placedogs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  fly.toml  package-lock.json  package.json
.github/workflows/: auto-update-image-count.yml  deploy.yml  docker.yml  test.yml
PlaceDog/: Cargo.toml  Fetch Image.bru  bruno.json
public/: index.html  manifest.json
server/: tsconfig.json
server/src/: server.ts
server/src/lib/: application.ts  image.ts  resize.ts
server/src/routes/: index.ts
site/: .gitignore  Dockerfile  docker-compose.yml  package-lock.json  package.json
site/server/: .gitignore  Dockerfile  docker-compose.yml  tsconfig.json
site/server/src/lib/: application.ts  resize.ts
site/server/src/routes/: index.ts
src/: App.css  App.js  index.js  main.rs
static/: App.css  index.html
v2-server/: go.mod  go.sum  main.go
