[package]
name = "placedog"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.6"
actix-web = "4.9.0"
tokio = { version = "1.43.0", features = ["fs"] }
bytes = "1.11.1"
rand = "0.8"
rayon = "1.8"
num_cpus = "1.16"
chrono = "0.4"
photon-rs = "0.3.2"
serde_json = "1.0"
sysinfo = "0.30.5"
governor = "0.6"
log = "0.4"
env_logger = "0.11"
url = "2.5"
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }
