[package]
name = "placedog"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.10"
actix-web = "4.13.0"
tokio = { version = "1.49.0", features = ["fs"] }
bytes = "1.11.1"
rand = "0.10.0"
rayon = "1.11.0"
num_cpus = "1.17.0"
chrono = "0.4.44"
photon-rs = "0.3.3"
serde_json = "1.0.149"
sysinfo = "0.38.2"
governor = "0.10.4"
log = "0.4.29"
env_logger = "0.11.9"
url = "2.5.8"
futures = "0.3.32"
reqwest = { version = "0.13.2", features = ["json"] }
